# Robot-Visualization

./: README.md
A Moving Robot/01157006_HW2/: main.cpp
A Moving Robot/Geometric Transformation Sample Code/: CMakeLists.txt
Lighting and Shading/01157006_HW4/: main.cpp
Lighting and Shading/Shading Sample Code/: CMakeLists.txt  light.c  shade.c
Texture Mapping and Billboards/01157006_HW5/: CG_HW5.sln
Texture Mapping and Billboards/01157006_HW5/CG_HW5/: CG_HW5.vcxproj  main.cpp
Texture Mapping and Billboards/Texture and Billboards  Sample Code/: CMakeLists.txt  TextureMap.cpp  alias_text.c  billboard.c  blend.c  copy_texture.c  mipmap.c  texture.c
Viewing and Projection/01157006_HW3/: robot.cpp
Viewing and Projection/Viewing Projection Sample Code/02 Viewing/: CMakeLists.txt  View1.c  car.c  new_view.c  view.c
Viewing and Projection/Viewing Projection Sample Code/03 Projection/: CMakeLists.txt
